# dados-de-nimb

./: README.md  alpha.py  bot.py  character_sheet.py  dados.py  dados_bot.py  db.sql  db_bot.py  keep_alive.py  lena.py  main.py  nimb.py  package-lock.json  pages.py  pyproject.toml  rolagens.db  rolagens.py
alpha/: character_sheet.py  dados.py  magias.py  personagens.py
nimb.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
personagens/: template.json
static/js/: main.js
static/styles/: style.css
templates/: ficha_form.html
