[tool.poetry]
name = "nimb"
version = "0.1.0"
description = ""
authors = ["aplneto <apln2@cin.ufpe.br>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
flask = "^1.1.2"
markdown = "^3.3.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
